@@ -1,7 +1,7 @@
 <?php
 namespace MyTester\Bridges\NetteDI;
 
-use \MyTester\TestCase;
+use MyTester\TestCase;
 
 /**
  * Tests Runner
@@ -9,6 +9,7 @@ use \MyTester\TestCase;
  * @author Jakub Konečný
  * @copyright (c) 2016, Jakub Konečný
  * @license https://spdx.org/licenses/BSD-3-Clause.html BSD-3-Clause
+ * @method void onExecute()
  */
 class TestsRunner {
   use \Nette\SmartObject;
@@ -17,6 +18,8 @@ class TestsRunner {
   protected $suits = [];
   /** @var array */
   static $autoloader = [];
+  /** @var array */
+  public $onExecute = [];
   
   /**
    * @param TestCase $suit
@@ -30,8 +33,7 @@ class TestsRunner {
    * @return void
    */
   function execute() {
-    \MyTester\Environment::setup();
-    \MyTester\Environment::printInfo();
+    $this->onExecute();
     foreach($this->suits as $suit) {
       $suit->run();
     }
